[tool.poetry]
name = "numpy_lab"
version = "0.1.0"
description = "Experiments about linear algebra using Python."
authors = ["Mïk <m@mathsistor.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
